@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST blockdiag-0.4.tar.gz 30859 RMD160 2c7473491bd5e69fe1dce076c52822170e1b4c9e SHA1 495c91c0edfe7caf7a8b5afed8f04d8cf498a1f9 SHA256 23726e0afb2f774a92e5b0fd05afee0a216d6ce0796c737fda098864abb60fb7
 DIST blockdiag-0.5.1.tar.gz 34128 RMD160 ddfbd502993ee355fdf4224321eff4d025dd125e SHA1 19251fe869ed8347d3015fb2b8ea1af3a2b7e60c SHA256 178fea56291b417b04ddb1c8b53a0cf7b94727403c8a757b43b363f35c034148
+DIST blockdiag-0.5.2.tar.gz 34932 RMD160 120535497597b95642409ce10672d34027f6d6fe SHA1 eb414fe7d804a63302c2c6497600429481241a48 SHA256 b686f18f8ce45c8353e0687c1178035a362bd10bff5cc9f52a6fa7f97bd7ec88
 EBUILD blockdiag-0.4.ebuild 899 RMD160 db822c6cb06a9ff99deb2c82176315b51c8085e2 SHA1 a5b7ad9a732127e1b2fdf877df033505fa03bb09 SHA256 f91c0a3c9243537cfcac446e298c253ca0df75ae336167e74b2893bf521a7c47
 EBUILD blockdiag-0.5.1.ebuild 901 RMD160 20420e3732f0fce5d80e4607a14987986ffb3d4d SHA1 356774fa173698409385fd296f0959d69ce7cb13 SHA256 83552cf37343360dd28c0b2fc51ee2d3354eff7a687308dbcc9c8fd0aacd7b33
-MISC ChangeLog 1072 RMD160 810691590506bdd90db6011f5df99820aa022996 SHA1 1ef19c3e50aafb2132d094373a36fcd42daba71b SHA256 d0df010226753c30fa7c27a6bc94c3fed2de738ffb84df4405ff2cddf85b0b98
+EBUILD blockdiag-0.5.2.ebuild 901 RMD160 20420e3732f0fce5d80e4607a14987986ffb3d4d SHA1 356774fa173698409385fd296f0959d69ce7cb13 SHA256 83552cf37343360dd28c0b2fc51ee2d3354eff7a687308dbcc9c8fd0aacd7b33
+MISC ChangeLog 1197 RMD160 bc18a6fc6808604c3aa47ef67a6136653fcc7f43 SHA1 dfdf2566f24e27f9e6e14555a7e52e678e33888b SHA256 2413463afcb52a9a9c1e3817d7d2497cb62c91022e5b4b05c251675d7d219471
 MISC metadata.xml 669 RMD160 dcb67ada7b260b3ce4d5b5ec3f66ce2193ea2413 SHA1 22302b9b620dfb15f8c13137c866a5ac587e86e9 SHA256 24d91965daa15b89c7a8fa1e6eefaa6d459645d881cd67a1738198253cebd533
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzZTHYACgkQzJrj3cAXR0lZawCgtpC5f42yUtz46TlXrp1MAkAz
-4mEAn0mIL62CJieOPkGQ1bqSoS2lCHy6
-=chbh
+iEYEARECAAYFAkzvg3YACgkQzJrj3cAXR0kIigCeK6s+79ngbvNbP1vifuKsLVPy
+EDMAoJX9Yw3ylNa9mGHLnSL2AaupTQ2l
+=Qubo
 -----END PGP SIGNATURE-----
