@@ -57,5 +57,7 @@ REM 2010-12-23 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 sys-libs/libeatmydata-
 REM 2010-12-23 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 sys-libs/libeatmydata-15.4 %a
 REM 2010-12-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 mail-client/notmuch-0.5 %a
 REM 2010-12-24 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 mail-client/notmuch-0.5 %a
+REM 2010-12-26 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/blockdiag-0.5.2 %a
+REM 2010-12-26 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/blockdiag-0.5.2 %a
 
 # vim: set sw=4 sts=4 et tw=120 fenc=utf-8 ft=remind:
